--- a/package.json
+++ b/package.json
@@ -1,1 +1,21 @@
-// ici ce sont les dépendances 
+{
+  "name": "SLG_SESSION-ID",
+  "version": "0.0.1",
+  "description": "whatsapp pair code AND QR",
+  "main": "index.js",
+  "scripts": {
+    "Pqs": "pm2 start index.js --attach --name slg"
+  },
+  "author": "SLG",
+  "dependencies": {
+    "@whiskeysockets/baileys": "^6.7.17",
+    "axios": "^1.8.4",
+    "awesome-phonenumber": "^6.10.0",
+    "express": "^4.18.2",
+    "fs-extra": "latest",
+    "node-cache": "^5.1.2",
+    "phone": "3.1.59",
+    "pm2": "^6.0.5",
+    "pino": "^9.6.0",
+    "qrcode": "^1.5.4"
+  }
