--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "awesome-phonenumber": "^6.10.0",
     "express": "^4.18.2",
     "fs-extra": "latest",
+    "megajs": "^1.1.0",
     "node-cache": "^5.1.2",
     "phone": "3.1.59",
     "pm2": "^6.0.5",
