--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "phone": "3.1.59",
     "pm2": "^6.0.5",
     "pino": "^9.6.0",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "sequelize": "^6.37.5"
   }
 }
