--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "megajs": "^1.1.0",
     "node-cache": "^5.1.2",
     "phone": "3.1.59",
+    "sequelize": "^6.37.5",
     "pg": "^8.11.2",
     "pm2": "^6.0.5",
     "pino": "^9.6.0",
-    "qrcode": "^1.5.4",
-    "sequelize": "^6.37.5"
+    "qrcode": "^1.5.4"
+    
   }
 }
